# thumb-face

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  fly.toml  log.py  main.py  pyproject.toml
face_recognition/: __init__.py  face_recognition.py
